--- a/contents/config.yml
+++ b/contents/config.yml
@@ -1,5 +1,5 @@
-title: Sen Li's Homepage
-page-top-title: Sen Li
-top-section-bg-text: Computer Science
-home-subtitle: Sen Li&ensp;|&ensp;李森
-copyright-text: '&copy; Sen Li 2023-2024. All Rights Reserved.'
+title: Mutian He's Homepage
+page-top-title: Mutian He
+top-section-bg-text: AIDD
+home-subtitle:  Mutian He&ensp;|&ensp;何牧天
+copyright-text: '&copy; Mutian He 2024-2025. All Rights Reserved.'
